tests/models/enum/unnamed/i64/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value(
       #[field(validate = validate_fn)]
        i64
    ),
}
fn main() {}
